--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,10 @@
     <title>Koalla Holla</title>
     <script src="vendors/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="views/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header>
@@ -16,16 +19,18 @@
     </header>
     <section id="addKoala">
       <h2>Add Koala</h2>
-      <input type="text" id="nameIn" value="" placeholder="Name">
-      <input type="text" id="ageIn" value="" placeholder="Age">
-      <input type="text" id="genderIn" value="" placeholder="Gender">
-      <input type="text" id="readyForTransferIn" value="" placeholder="Transfer">
-      <input type="text" id="notesIn" value="" placeholder="Notes">
-      <button type="button" id="addButton">Add Koala</button>
+      <div class="input-container">
+        <input type="text" id="nameIn" value="" class="form-control" placeholder="Name">
+        <input type="text" id="ageIn" value="" class="form-control" placeholder="Age">
+        <input type="text" id="genderIn" value="" class="form-control" placeholder="Gender">
+        <input type="text" id="readyForTransferIn" class="form-control" value="" placeholder="Transfer">
+        <input type="text" id="notesIn" value="" class="form-control" placeholder="Notes">
+      </div>
+      <button type="button" class="btn btn-primary" id="addButton">Add Koala</button>
     </section>
     <section>
       <h2>All Koalas</h2>
-      <table>
+      <table class="table table-dark table-striped">
         <thead>
           <tr>
             <th>Name</th>
